fix: :art: adjust loading overlay background opacity for better visibility

--- a/app/globals.css
+++ b/app/globals.css
@@ -127,7 +127,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgba(255, 255, 255, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
